force-app/main/default/objects/NotificationMessage__mdt/NotificationMessage__mdt.object-meta.xml
<CustomObject>
    <label>Notification Message</label>
    <pluralLabel>Notification Messages</pluralLabel>
</CustomObject>