force-app/main/default/objects/NotificationMessage__mdt/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>