force-app/main/default/objects/NotificationMessage__mdt/fields/HelpURL__c.field-meta.xml
<CustomField>
    <fullName>HelpURL__c</fullName>
    <label>Help URL</label>
    <type>Url</type>
</CustomField>