force-app/main/default/objects/NotificationMessage__mdt/fields/IsLink__c.field-meta.xml
<CustomField>
    <fullName>IsLink__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Link</label>
    <type>Checkbox</type>
</CustomField>