force-app/main/default/objects/NotificationMessage__mdt/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <label>Variant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>